force-app/main/default/objects/SYS_ProcessReceipt__c/SYS_ProcessReceipt__c.object-meta.xml
<CustomObject>
    <description>Tracks unique process executions and deduplication keys to ensure idempotent behavior across system operations. Used by administrators and developers for technical maintenance, integration tracking, and duplicate prevention.</description>
    <label>SYS Process Receipt</label>
    <nameField>
        <label>Receipt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYS Process Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>