force-app/main/default/objects/SYS_ProcessReceipt__c/fields/DedupKey__c.field-meta.xml
<CustomField>
    <fullName>DedupKey__c</fullName>
    <label>Dedup Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>