force-app/main/default/objects/SYS_ProcessReceipt__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Unique field (filled via trigger as Namespace + Dedupkey</description>
    <label>Key</label>
    <length>140</length>
    <type>Text</type>
</CustomField>