force-app/main/default/objects/SYS_ProcessReceipt__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <label>Namespace</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>